--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.thshsh</groupId>
 	<artifactId>commons-vaadin</artifactId>
-	<version>2.0.2</version>
+	<version>3.0.0-SNAPSHOT</version>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<vaadin.version>14.1.25</vaadin.version>
+		<vaadin.version>18.0.2</vaadin.version>
 		<spring.version>2.2.6.RELEASE</spring.version>
 	</properties>
 	<dependencies>
