--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.thshsh</groupId>
 	<artifactId>commons-vaadin</artifactId>
-	<version>3.1.6-SNAPSHOT</version>
+	<version>4.0.0-SNAPSHOT</version>
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<vaadin.version>18.0.2</vaadin.version>
-		<spring.version>2.2.6.RELEASE</spring.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<vaadin.version>23.1.7</vaadin.version>
+		<spring.version>2.6.6</spring.version>
 	</properties>
 	<dependencies>
 		<dependency>
