--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>org.thshsh</groupId>
 			<artifactId>commons-lang</artifactId>
-			<version>1.3.0</version>
+			<version>1.4.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.atteo</groupId>
