--- a/pom.xml
+++ b/pom.xml
@@ -10,22 +10,22 @@
 		<spring.version>2.6.6</spring.version>
 	</properties>
 	<dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.vaadin</groupId>
-                <artifactId>vaadin-bom</artifactId>
-                <type>pom</type>
-                <scope>import</scope>
-                <version>${vaadin.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.vaadin</groupId>
+				<artifactId>vaadin-bom</artifactId>
+				<type>pom</type>
+				<scope>import</scope>
+				<version>${vaadin.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
-		 <dependency>
-            <groupId>com.vaadin</groupId>
-            <!-- Consider limiting the dependencies to flow-server only something, but for most end users depending on vaadin-core is ok -->
-            <artifactId>vaadin-core</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<!-- Consider limiting the dependencies to flow-server only something, but for most end users depending on vaadin-core is ok -->
+			<artifactId>vaadin-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
@@ -68,6 +68,11 @@
 			<version>1.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.vaadin.jchristophe</groupId>
+			<artifactId>sortable-layout</artifactId>
+			<version>1.1.9</version>
+		</dependency>
+		<dependency>
 			<groupId>org.vaadin.addons.thshsh</groupId>
 			<artifactId>easyrender</artifactId>
 			<version>1.0.0</version>
@@ -98,17 +103,17 @@
 			<version>1.2.2</version>
 			<optional>true</optional>
 		</dependency>
-		 <dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-testbench</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-testbench</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
